# sd-jwt-python

./: .gitignore  CODEOWNERS  README.md  pyproject.toml
.github/workflows/: pypi.yml  python-package.yml
examples/: settings.yml
examples/complex_eidas/: specification.yml
examples/json_serialization_flattened/: specification.yml
examples/json_serialization_general/: specification.yml
examples/simple_array/: specification.yml
src/sd_jwt/: common.py  disclosure.py  holder.py  issuer.py  verifier.py
src/sd_jwt/utils/: demo_settings.yml  demo_utils.py  formatting.py  yaml_specification.py
tests/: conftest.py  test_disclose_all_shortcut.py  test_e2e_testcases.py  test_scripts.py  test_utils_yaml_specification.py
tests/testcases/: settings.yml
tests/testcases/array_data_types/: specification.yml
tests/testcases/array_full_sd/: specification.yml
tests/testcases/array_in_sd/: specification.yml
tests/testcases/array_nested_in_plain/: specification.yml
tests/testcases/array_none_disclosed/: specification.yml
tests/testcases/array_of_nulls/: specification.yml
tests/testcases/array_of_objects/: specification.yml
tests/testcases/array_of_scalars/: specification.yml
tests/testcases/array_recursive_sd/: specification.yml
tests/testcases/header_mod/: specification.yml
tests/testcases/json_serialization/: specification.yml
tests/testcases/json_serialization_flattened/: specification.yml
tests/testcases/json_serialization_general/: specification.yml
tests/testcases/key_binding/: specification.yml
tests/testcases/recursions/: specification.yml
(+1 files in other folders)
